--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     
   web:
     container_name: web
-    image: dchnkoo/web-bushop:new
+    image: alexey-fedchishyn/bushop:new
     ports:
       - "8000:8000"
     env_file:
